try to fix css broken on photographer header section

--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,10 @@ header {
   height: 90px;
 }
 
-h1 {
+/* h1 {
   color: #901C1C;
   margin-right: 100px;
-}
+} */
 
 .logo {
   height: 50px;
@@ -108,7 +108,7 @@ h1 {
 /* PHOTOGRAPHER.HTML - Medias Section */
 
 .photographer-media {
-  float: left;
+  display: grid;
 };
 
 .media {
